2024-03-13  Morten Welinder  <terra@gnome.org>

	* src/cell.c (gnm_cell_get_text_for_editing): If the format family
	is unknown, render as general.

2024-02-11  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2024-02-11  Morten Welinder <terra@gnome.org>

	* Release 1.12.57

2024-02-11  Morten Welinder  <terra@gnome.org>

	* src/sheet.c (sheet_range_set_expr_cb): Also redraw.  Fixes #755.

2023-12-05  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-write.c (xml_write_filter_field): Fix reversed sense
	on several fields.

	* src/xml-sax-read.c (xml_sax_filter_condition): Fix badly broken
	reading of auto-filters.

	* src/sheet-filter.c (gnm_filter_condition_new_bucket): Cap n,
	so crazy numbers don't cause trouble down the line.
	(gnm_filter_combo_apply): Fix problem with empty range; fix
	gnm_float/double mixing.

2023-11-16  Morten Welinder  <terra@gnome.org>

	* src/wbc-gtk.c (wbcg_set_action_feedback): New function to
	suppress toggle action signalling while we're updating the ui.

2023-11-02  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-11-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.56

2023-09-24  Morten Welinder  <terra@gnome.org>

	* src/dependent.h (GnmDependentClass): Add q_array_context since
	certain graph deps are computed in array context.

	* src/dependent.c (dependent_link): Observe q_array_context.
	(link_unlink_expr_dep): Don't clear array context for operators.

2023-02-02  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-02-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.55

2023-01-19  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-01-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.54

2023-01-15  Morten Welinder  <terra@gnome.org>

	* src/sheet-object.c (sheet_objects_clear): Freeze the object
	views, just in case there are a lot of objects to clear.
